# wildframe

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  bird_photo_ai_project_handoff.md  vcpkg.json
.claude/: settings.json
.claude/commands/: review.md  tracer.md
.github/workflows/: ci.yml
cmake/: ClangTooling.cmake  PlatformMinimums.cmake  clang-tidy-tests.yaml
cmake/triplets/: arm64-osx-asan.cmake
data/: config.default.toml
docs/: ARCHITECTURE.md  BACKLOG.md  CONFIG.md  DEV_SETUP.md  FIXTURES.md  LICENSING.md  METADATA.md  REVIEW_TEMPLATE.md  STYLE.md
docs/reviews/: 2026-04-21-sprint-0-infrastructure.md  2026-04-22-ci-hardening.md  2026-04-23-main-state.md
libs/detect/: CMakeLists.txt
libs/detect/include/wildframe/detect/: bbox.hpp  detect.hpp  detect_stage.hpp
libs/detect/src/: detect.cpp  detect_stage.cpp
libs/detect/tests/: CMakeLists.txt  detect_stage_test.cpp  detect_test.cpp
libs/focus/: CMakeLists.txt
libs/focus/include/wildframe/focus/: focus.hpp  focus_stage.hpp
libs/focus/src/: focus.cpp  focus_stage.cpp
libs/focus/tests/: CMakeLists.txt  focus_stage_test.cpp  focus_test.cpp
libs/ingest/: CMakeLists.txt
libs/ingest/include/wildframe/ingest/: enumerate.hpp  image_job.hpp  ingest.hpp  ingest_error.hpp
libs/ingest/src/: enumerate.cpp  ingest.cpp
libs/ingest/tests/: CMakeLists.txt  enumerate_test.cpp
libs/log/: CMakeLists.txt
libs/log/include/wildframe/log/: log.hpp
libs/log/src/: log.cpp
libs/log/tests/: .clang-tidy  CMakeLists.txt  log_test.cpp
libs/metadata/: CMakeLists.txt
libs/metadata/include/wildframe/metadata/: deterministic_metadata.hpp  metadata.hpp  metadata_error.hpp  metadata_read_stage.hpp  metadata_write_stage.hpp  sidecar_writer.hpp  version.hpp
libs/metadata/src/: metadata.cpp  metadata_read_stage.cpp  metadata_write_stage.cpp  sidecar_writer.cpp
libs/metadata/tests/: CMakeLists.txt  metadata_read_stage_test.cpp  metadata_test.cpp  metadata_write_stage_test.cpp  sidecar_writer_test.cpp
libs/orchestrator/: CMakeLists.txt
libs/orchestrator/include/wildframe/orchestrator/: orchestrator.hpp  paths.hpp  pipeline_stage.hpp
libs/orchestrator/src/: orchestrator.cpp  paths.cpp
libs/orchestrator/tests/: CMakeLists.txt  orchestrator_test.cpp  paths_test.cpp
libs/raw/: CMakeLists.txt
libs/raw/include/wildframe/raw/: preview_image.hpp  raw.hpp  raw_stage.hpp
libs/raw/src/: raw.cpp  raw_stage.cpp
libs/raw/tests/: CMakeLists.txt  raw_stage_test.cpp  raw_test.cpp
src/: CMakeLists.txt  cli_args.cpp  cli_args.hpp  config.cpp  config.hpp  main.cpp  run.cpp  run.hpp
src/tests/: .clang-tidy  CMakeLists.txt  cli_args_test.cpp  config_test.cpp
tools/: bootstrap.sh  fetch_fixtures.cmake  fetch_models.cmake
